correct contrast

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1059,7 +1059,7 @@ p {
 .about-stack span {
   display: inline-block;
   background: var(--clr-grey-9);
-  color: var(--clr-grey-5);
+  color: var(--clr-grey-3);
   margin: 0.25rem;
   padding: 0.25rem 0.5rem;
   border-radius: var(--radius);
